# CTEDemo

./: .env.agent.example  .gitignore  CLAUDE.md  README.md  dev.sh  start.sh  sync.sh
.claude/: launch.json  (+1 more)
backend/: .env  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/src/: main.py
backend/src/api/: dependencies.py  error_handlers.py  exceptions.py
backend/src/api/v1/: ctes.py  destinatarios.py  dev.py  remetentes.py  router.py  transportadoras.py
backend/src/api/v1/schemas/: cte_schemas.py  destinatario_schemas.py  remetente_schemas.py  transportadora_schemas.py
backend/src/api/v1/serializers/: cte_serializer.py  destinatario_serializer.py  remetente_serializer.py  transportadora_serializer.py
backend/src/config/: settings.py
backend/src/domain/cte/: cfop_validator.py  entity.py  enums.py  errors.py  home.py  publisher.py  repository.py  validation.py  value_objects.py  xml_builder.py
backend/src/domain/destinatario/: entity.py  enums.py  errors.py  home.py  repository.py  value_objects.py
backend/src/domain/nfe/: entity.py  repository.py
backend/src/domain/remetente/: entity.py  enums.py  errors.py  home.py  repository.py  value_objects.py
backend/src/domain/services/: cte_generation_service.py  nfe_validation_service.py
backend/src/domain/shared/: __init__.py  cnpj.py  cpf.py  vehicle_plate.py
backend/src/domain/transportadora/: entity.py  enums.py  errors.py  home.py  repository.py  value_objects.py
backend/src/infrastructure/database/: session.py
backend/src/infrastructure/messaging/: memory_cte_publisher.py
(+179 files in other folders)
